<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/layout_add_game"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_title"
            android:id="@+id/tvGameTitle"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etGameTitle"
            android:hint="@string/game_title_hint"
            android:layout_toRightOf="@+id/tvGameTitle"
            android:layout_alignBottom="@+id/tvGameTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_console_type"
            android:id="@+id/tvGameConsoleType"
            android:layout_below="@+id/tvGameTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etGameConsoleType"
            android:hint="@string/game_console_type_hint"
            android:layout_toRightOf="@+id/tvGameConsoleType"
            android:layout_alignBottom="@+id/tvGameConsoleType" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGameConsoleType"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/image"
            android:id="@+id/tvUploadImage"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:id="@+id/btUpload"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/tvUploadImage" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivVideoGame"
            android:contentDescription="@string/game_thumbnail_content_description"
            android:layout_below="@+id/tvUploadImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:id="@+id/btSubmit"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ivVideoGame" />
    </RelativeLayout>
</ScrollView>